Fix back button text alignment

--- a/TF_Settings_Web/src/Components/TFButton/TFButtons.module.scss
+++ b/TF_Settings_Web/src/Components/TFButton/TFButtons.module.scss
@@ -78,10 +78,16 @@
         height: 80px;
         border-radius: 30px;
         background: v.$light-grey-gradient;
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        justify-items: center;
+        display: flex;
+        justify-content: center;
         align-items: center;
+
+        .back-container {
+            width: 120px;
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
+        }
 
         h1 {
             margin: 0 !important;
